# openff-nagl-models

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  deploy.yaml
devtools/: README.md
devtools/conda-envs/: docs_env.yaml  test_env.yaml
devtools/dev-docs/: releases.md
docs/: CHANGELOG.md  Makefile  conf.py  index.md  make.bat
docs/models/: index.md
docs/models/openff-gnn-am1bcc-0.0.1-alpha.1/: index.md
docs/models/openff-gnn-am1bcc-0.1.0-rc1/: index.md
docs/models/openff-gnn-am1bcc-0.1.0-rc2/: index.md
docs/models/openff-gnn-am1bcc-0.1.0-rc3/: index.md
docs/models/openff-gnn-am1bcc-1.0.0/: index.md
openff/nagl_models/: __init__.py  _dynamic_fetch.py  _version.py  openff_nagl_models.py
openff/nagl_models/models/: README.md
openff/nagl_models/tests/: test_dynamic_fetch.py  test_model_performance.py  test_openff_nagl_models.py
openff/nagl_models/tests/data/: releases.json
