[build-system]
requires = [
  "setuptools",
  "versioningit",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "openff-nagl-models"
description = "OpenFF NAGL Models"
license = { file = "LICENSE" }
authors = [
    {name = "Lily Wang", email = "lily.wang@openforcefield.org"},
]
maintainers = [
    {name = "Lily Wang", email = "lily.wang@openforcefield.org"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "numpy",
]

[project.entry-points."openforcefield.nagl_model_directory"]
get_nagl_model_dirs_paths = "openff.nagl_models:get_nagl_model_dirs_paths"

[project.urls]
Repository = "https://github.com/openforcefield/openff-nagl-models"
Documentation = "https://openff-nagl-models.readthedocs.io"

[tool.versioningit]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "openff/nagl_models/tests",
]

[tool.coverage.run]
omit = [
    "*/*/tests/*",
]
