[build-system]
requires = [
  "setuptools",
  "versioningit",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "openff-nagl-models"
description = "OpenFF NAGL Models"
license = { file = "LICENSE" }
authors = [
    {name = "Lily Wang", email = "lily.wang@openforcefield.org"},
]
maintainers = [
    {name = "Lily Wang", email = "lily.wang@openforcefield.org"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "platformdirs",
  "packaging",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "numpy",
]

[project.entry-points."openforcefield.nagl_model_directory"]
get_nagl_model_dirs_paths = "openff.nagl_models:get_nagl_model_dirs_paths"

[project.urls]
Repository = "https://github.com/openforcefield/openff-nagl-models"
Documentation = "https://openff-nagl-models.readthedocs.io"

[tool.versioningit]

[tool.mypy]
mypy_path = "stubs/"
python_version = "3.11"
plugins = "numpy.typing.mypy_plugin,pydantic.mypy"
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "openff.toolkit",
    "openff.nagl.*",
    "pytest_socket",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "openff/nagl_models/tests",
]

[tool.coverage.run]
omit = [
    "*/*/tests/*",
]
