[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools",
  "versioningit",
]

[project]
name = "openff-nagl-models"
description = "OpenFF NAGL Models"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Lily Wang", email = "lily.wang@openforcefield.org" },
]
authors = [
  { name = "Lily Wang", email = "lily.wang@openforcefield.org" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

dependencies = [
  "packaging",
  "platformdirs",
]
optional-dependencies.test = [
  "numpy",
  "pytest>=6",
]
urls.Documentation = "https://openff-nagl-models.readthedocs.io"
urls.Repository = "https://github.com/openforcefield/openff-nagl-models"
entry-points."openforcefield.nagl_model_directory".get_nagl_model_dirs_paths = "openff.nagl_models:get_nagl_model_dirs_paths"

[tool.setuptools.packages]
find = {}

[tool.ruff]
line-length = 119
namespace-packages = [ "openff/interchange/" ]

lint.select = [ "E", "F", "I", "NPY", "RUF", "UP", "W" ]

[tool.mypy]
mypy_path = "stubs/"
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "openff.toolkit",
    "openff.nagl.*",
    "pytest_socket",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "openff/nagl_models/tests",
]

[tool.coverage.run]
omit = [
  "*/*/tests/*",
]

[tool.versioningit]
